Move docker-compose to in code
Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>